fixed sizing on mobile devices

--- a/css/tips.css
+++ b/css/tips.css
@@ -172,6 +172,7 @@ iframe {
 
     .overflow {
         width: 100%;
+        max-width: 100%;
     }
 
     table {
